--- a/mon_site_web.css
+++ b/mon_site_web.css
@@ -8,7 +8,7 @@ body {
     font-size: 18px;
     color: #333;
      /* Arrière-plan */
-  background-image: url('images/arriereplan.png'); 
+  background-image: url('arriereplan.png'); 
   background-size: cover; 
   background-position: center; 
   background-attachment: fixed; 
@@ -23,7 +23,7 @@ body {
     color: #fff;
     padding: 20px;
     text-align: center;
-    background: url('images/image4.jpg') center/cover no-repeat;
+    background: url('image4.jpg') center/cover no-repeat;
     backdrop-filter: blur(5px);
   }
  
